# claude-power-pack

./: .gitattributes  .gitignore  .powerpack  CLAUDE.md  OWNERSHIP_OVERLAP_AUDIT.md  PP_AUDIT_REPORT.md  README.md  RESUMPTION_FILE.md  ROADMAP.md  SKILL.md  SKILLBANK.md  SOFTWARE_ELITE_PATTERNS.md  SSOT.md  install-global.ps1  install-global.sh  install.ps1  install.sh  package.json
_audit_cache/: semantic_tags.json
agents/: comment-analyzer.md  cpp-reviewer.md  go-reviewer.md  graphify-librarian.md  harness-optimizer.md  java-reviewer.md  oneshot-architect-auditor.md  python-reviewer.md  rust-reviewer.md  silent-failure-hunter.md  type-design-analyzer.md  typescript-reviewer.md
commands/: analyze-roi.md  arch-decision.md  audit-all.md  auto-reset.md  auto-test.md  autoupdate.md  backup.md  bootstrap-new-project.md  code-review.md  compact-rescue.md  compound.md  cost-autopsy.md  cost-estimate.md  cpp-deep-research.md  cpp-design.md  cpp-prd-parse.md  customclaw.md  demo-ready.md  deploy.md  design-md.md  distill.md  generate-docs.md  investment-ready-audit.md  ira.md  kclear-when.md  liveness.md  meta-systems.md  obsidian-setup.md  omni-verification-oracle-audit.md  one-shot-compile.md  ovo-audit.md  panes.md  prd-generate.md  prd-tier0.md  prd-tier1.md  prd-tier2.md  prd-tier3.md  pre-compact.md  recovery-verdict.md  restore-panes.md  (+22 more)
docs/: HOOKS_SETUP.md  INSTALL.md  (+5 more)
kpp-distiller-kernel/: README.md  pyproject.toml
kpp-distiller-kernel/kpp_distiller_kernel/: __init__.py  contract.py  gate_runner.py  hawkins_gate.py  placeholder_guard.py  roi_calculator.py
(+1750 files in other folders)
